// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: all alarms 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestTestCollectionLatencyP100Warning2EB36FBF",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":6,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestTestCollectionErrorCountWarningA761FBBF",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":12,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestTestCollectionUserErrorCountWarning0B33A95D",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":18,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestTestCollectionUserErrorRateWarningA9D3AB0D",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":0,\\"y\\":4,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestTestCollectionFaultCountWarningAD76A50D",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":6,\\"y\\":4,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestTestCollectionFaultRateWarning1C589C77",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "Collection": Object {
      "Properties": Object {
        "Name": "TestCollection",
      },
      "Type": "AWS::OpenSearchServerless::Collection",
    },
    "Resource": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### OpenSearch Serverless Collection **[TestCollection](https://eu-west-1.console.aws.amazon.com/aos/home?region=eu-west-1#opensearch/collections/TestCollection)**\\"}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Search request latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"SearchRequestLatency Maximum > 5000 for 3 datapoints within 15 minutes\\",\\"value\\":5000,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":8,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"SearchRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"SearchRequestErrors > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"4xx > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"5xx > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":16,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors (rate)\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx (avg)\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx (avg)\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"4xx (avg) > 0.1 for 3 datapoints within 15 minutes\\",\\"value\\":0.1,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"5xx (avg) > 0.1 for 3 datapoints within 15 minutes\\",\\"value\\":0.1,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Rate\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":0,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion requests\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestSuccess\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestSuccess\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":12,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "ScopeTestTestCollectionErrorCountWarningA761FBBF": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error count is too high.",
        "AlarmName": "Test-TestCollection-Error-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "SearchRequestErrors",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ClientId",
                    "Value": Object {
                      "Ref": "AWS::AccountId",
                    },
                  },
                  Object {
                    "Name": "CollectionId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "Collection",
                        "Id",
                      ],
                    },
                  },
                  Object {
                    "Name": "CollectionName",
                    "Value": "TestCollection",
                  },
                ],
                "MetricName": "SearchRequestErrors",
                "Namespace": "AWS/AOSS",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestTestCollectionFaultCountWarningAD76A50D": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault count is too high.",
        "AlarmName": "Test-TestCollection-Fault-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5xx",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ClientId",
                    "Value": Object {
                      "Ref": "AWS::AccountId",
                    },
                  },
                  Object {
                    "Name": "CollectionId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "Collection",
                        "Id",
                      ],
                    },
                  },
                  Object {
                    "Name": "CollectionName",
                    "Value": "TestCollection",
                  },
                ],
                "MetricName": "5xx",
                "Namespace": "AWS/AOSS",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestTestCollectionFaultRateWarning1C589C77": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault rate is too high.",
        "AlarmName": "Test-TestCollection-Fault-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5xx (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ClientId",
                    "Value": Object {
                      "Ref": "AWS::AccountId",
                    },
                  },
                  Object {
                    "Name": "CollectionId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "Collection",
                        "Id",
                      ],
                    },
                  },
                  Object {
                    "Name": "CollectionName",
                    "Value": "TestCollection",
                  },
                ],
                "MetricName": "5xx",
                "Namespace": "AWS/AOSS",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestTestCollectionLatencyP100Warning2EB36FBF": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P100 latency is too high.",
        "AlarmName": "Test-TestCollection-Latency-P100-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "SearchRequestLatency Maximum",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ClientId",
                    "Value": Object {
                      "Ref": "AWS::AccountId",
                    },
                  },
                  Object {
                    "Name": "CollectionId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "Collection",
                        "Id",
                      ],
                    },
                  },
                  Object {
                    "Name": "CollectionName",
                    "Value": "TestCollection",
                  },
                ],
                "MetricName": "SearchRequestLatency",
                "Namespace": "AWS/AOSS",
              },
              "Period": 300,
              "Stat": "Maximum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 5000,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestTestCollectionUserErrorCountWarning0B33A95D": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "UserError count is too high.",
        "AlarmName": "Test-TestCollection-UserError-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4xx",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ClientId",
                    "Value": Object {
                      "Ref": "AWS::AccountId",
                    },
                  },
                  Object {
                    "Name": "CollectionId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "Collection",
                        "Id",
                      ],
                    },
                  },
                  Object {
                    "Name": "CollectionName",
                    "Value": "TestCollection",
                  },
                ],
                "MetricName": "4xx",
                "Namespace": "AWS/AOSS",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestTestCollectionUserErrorRateWarningA9D3AB0D": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "UserError rate is too high.",
        "AlarmName": "Test-TestCollection-UserError-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4xx (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ClientId",
                    "Value": Object {
                      "Ref": "AWS::AccountId",
                    },
                  },
                  Object {
                    "Name": "CollectionId",
                    "Value": Object {
                      "Fn::GetAtt": Array [
                        "Collection",
                        "Id",
                      ],
                    },
                  },
                  Object {
                    "Name": "CollectionName",
                    "Value": "TestCollection",
                  },
                ],
                "MetricName": "4xx",
                "Namespace": "AWS/AOSS",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Summary68521F81": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### OpenSearch Serverless Collection **[TestCollection](https://eu-west-1.console.aws.amazon.com/aos/home?region=eu-west-1#opensearch/collections/TestCollection)**\\"}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Search request latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"SearchRequestLatency Maximum > 5000 for 3 datapoints within 15 minutes\\",\\"value\\":5000,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":8,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"SearchRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"SearchRequestErrors > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"4xx > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"5xx > 0 for 3 datapoints within 15 minutes\\",\\"value\\":0,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":16,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors (rate)\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx (avg)\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx (avg)\\"}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"4xx (avg) > 0.1 for 3 datapoints within 15 minutes\\",\\"value\\":0.1,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"5xx (avg) > 0.1 for 3 datapoints within 15 minutes\\",\\"value\\":0.1,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Rate\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":0,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion requests\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestSuccess\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestSuccess\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":12,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test: no alarms 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "DashboardBody": "{\\"widgets\\":[]}",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "Collection": Object {
      "Properties": Object {
        "Name": "TestCollection",
      },
      "Type": "AWS::OpenSearchServerless::Collection",
    },
    "Resource": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### OpenSearch Serverless Collection **[TestCollection](https://eu-west-1.console.aws.amazon.com/aos/home?region=eu-west-1#opensearch/collections/TestCollection)**\\"}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Search request latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":8,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"SearchRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":16,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors (rate)\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx (avg)\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx (avg)\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Rate\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":0,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion requests\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestSuccess\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestSuccess\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":12,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "Summary68521F81": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### OpenSearch Serverless Collection **[TestCollection](https://eu-west-1.console.aws.amazon.com/aos/home?region=eu-west-1#opensearch/collections/TestCollection)**\\"}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Search request latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"SearchRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":8,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"SearchRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"SearchRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":16,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Errors (rate)\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"4xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"4xx (avg)\\"}],[\\"AWS/AOSS\\",\\"5xx\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"5xx (avg)\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Rate\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":0,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion requests\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestSuccess\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestSuccess\\",\\"stat\\":\\"Sum\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestErrors\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestErrors\\",\\"stat\\":\\"Sum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":5,\\"x\\":12,\\"y\\":6,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Ingestion latency\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Average\\"}],[\\"AWS/AOSS\\",\\"IngestionRequestLatency\\",\\"ClientId\\",\\"",
              Object {
                "Ref": "AWS::AccountId",
              },
              "\\",\\"CollectionId\\",\\"",
              Object {
                "Fn::GetAtt": Array [
                  "Collection",
                  "Id",
                ],
              },
              "\\",\\"CollectionName\\",\\"TestCollection\\",{\\"label\\":\\"IngestionRequestLatency Maximum\\",\\"stat\\":\\"Maximum\\"}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"ms\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
